--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -56,37 +56,39 @@
 
   <!-- Main Content -->
   <main class="main">
-    <h1>Dashboard</h1>
+  <h1>Dashboard</h1>
 
-    <div class="cards">
-      <div class="card">
-        <h3><img src="groupb.png" class="icon"> Total Employees</h3>
-        <p class="value" id="employeeCount">0</p>
-      </div>
-
-      <div class="card">
-        <h3>Payroll Processed</h3>
-        <p class="value" id="payrollCount">0</p>
-      </div>
-
-      <!-- Added new charts -->
-      <div class="card" style="width:100%; max-width:600px;">
-        <h3>Tardiness (Late Minutes)</h3>
-        <canvas id="tardinessChart"></canvas>
-      </div>
-
-      <div class="card" style="width:100%; max-width:600px;">
-        <h3>Overtime Trend</h3>
-        <canvas id="overtimeChart"></canvas>
-      </div>
-
-      <div class="card" style="width:100%; max-width:600px;">
-        <h3>Undertime Trend</h3>
-        <canvas id="undertimeChart"></canvas>
-      </div>
-
+  <div class="cards">
+    <!-- Total Employees -->
+    <div class="card">
+      <h3><img src="groupb.png" class="icon"> Total Employees</h3>
+      <p class="value" id="employeeCount">0</p>
     </div>
-  </main>
+
+    <!-- Payroll Processed -->
+    <div class="card">
+      <h3><img src="user.png" class="icon"> Payroll Processed</h3>
+      <p class="value" id="payrollCount">0</p>
+    </div>
+
+    <!-- Real Report Charts -->
+    <div class="card chart-card">
+      <h3>Tardiness (Late Minutes)</h3>
+      <canvas id="tardinessChart"></canvas>
+    </div>
+
+    <div class="card chart-card">
+      <h3> Overtime (Minutes)</h3>
+      <canvas id="overtimeChart"></canvas>
+    </div>
+
+    <div class="card chart-card">
+      <h3>Undertime (Minutes)</h3>
+      <canvas id="undertimeChart"></canvas>
+    </div>
+  </div>
+</main>
+
 </div>
 
 <!-- Logout Confirmation Modal -->
@@ -107,38 +109,38 @@
 </div>
 
 <script>
-window.addEventListener("DOMContentLoaded", () => {
-  // Fake data for dashboard
-  fetch("/api/user")
-    .then(res => res.json())
-    .then(user => {
-      const usernameEl = document.getElementById("username");
-      if (usernameEl) usernameEl.textContent = user.name;
-    })
-    .catch(() => console.warn("User info not found"));
-
-  fetch("/api/employees/count")
-    .then(res => res.json())
-    .then(data => {
-      document.getElementById("employeeCount").textContent = data.total || 0;
-      document.getElementById("payrollCount").textContent = 3; // fake number
-    })
-    .catch(err => console.error("Error fetching employee count:", err));
-
-  // Fade animations
+window.addEventListener("DOMContentLoaded", async () => {
+  // Smooth fade-in
   const main = document.querySelector(".main");
   setTimeout(() => main.classList.add("show"), 50);
 
-  document.querySelectorAll("a").forEach(link => {
-    link.addEventListener("click", e => {
-      e.preventDefault();
-      main.classList.remove("show");
-      main.classList.add("hide");
-      setTimeout(() => window.location.href = link.href, 500); 
-    });
-  });
+  // ===== FETCH CURRENT EMPLOYEE COUNT =====
+  try {
+    const res = await fetch("/api/employees/count");
+    const data = await res.json();
+    document.getElementById("employeeCount").textContent = data.total || 0;
+  } catch (err) {
+    console.error("Error fetching employee count:", err);
+  }
 
-  // Logout modal
+  // ===== FETCH REPORT DATA =====
+  try {
+    const tardinessRes = await fetch("/api/reports/tardiness");
+    const undertimeRes = await fetch("/api/reports/undertime");
+    const overtimeRes = await fetch("/api/reports/overtime");
+
+    const tardiness = await tardinessRes.json();
+    const undertime = await undertimeRes.json();
+    const overtime = await overtimeRes.json();
+
+    buildTardinessChart(tardiness);
+    buildOvertimeChart(overtime);
+    buildUndertimeChart(undertime);
+  } catch (err) {
+    console.error("Error loading reports:", err);
+  }
+
+  // ===== LOGOUT MODAL =====
   const logoutBtn = document.getElementById("logoutBtn");
   const logoutModal = document.getElementById("logoutModal");
   const confirmLogout = document.getElementById("confirmLogout");
@@ -147,83 +149,95 @@ window.addEventListener("DOMContentLoaded", () => {
   logoutBtn.addEventListener("click", () => logoutModal.style.display = "flex");
   cancelLogout.addEventListener("click", () => logoutModal.style.display = "none");
   confirmLogout.addEventListener("click", () => {
-    fetch("/logout")
-      .then(() => {
-        logoutModal.style.display = "none";
-        window.location.href = "/LOGIN.html";
-      })
-      .catch(() => alert("⚠️ Error logging out. Please try again."));
+    fetch("/logout").then(() => window.location.href = "/LOGIN.html");
   });
-  window.addEventListener("click", e => { if(e.target === logoutModal) logoutModal.style.display="none"; });
-
-
-  
+  window.addEventListener("click", e => {
+    if (e.target === logoutModal) logoutModal.style.display = "none";
   });
+});
 
-  // ===== TARDINESS (Bar Chart) =====
-  const tardinessCtx = document.getElementById('tardinessChart').getContext('2d');
-  new Chart(tardinessCtx, {
-    type: 'bar',
+// Chart Builders
+function buildTardinessChart(data) {
+  const ctx = document.getElementById("tardinessChart").getContext("2d");
+  new Chart(ctx, {
+    type: "bar",
     data: {
-      labels: ['John', 'Adriane', 'Marko'],
+      labels: data.map(d => d.name),
       datasets: [{
-        label: 'Late Minutes (Oct 1–15)',
-        data: [35, 10, 22],
-        backgroundColor: '#FF6B6B',
+        label: "Total Late (minutes)",
+        data: data.map(d => d.totalLate || 0),
+        backgroundColor: "#FF6B6B",
         borderRadius: 5
       }]
     },
     options: {
       responsive: true,
-      plugins: { legend: { display: true, position: 'top' } },
-      scales: { y: { beginAtZero: true, title: { display: true, text: 'Minutes' } } }
+      plugins: { legend: { display: false } },
+      scales: { y: { beginAtZero: true } }
     }
   });
+}
 
-  // ===== OVERTIME (Line Chart) =====
-  const overtimeCtx = document.getElementById('overtimeChart').getContext('2d');
-  new Chart(overtimeCtx, {
-    type: 'line',
+function buildOvertimeChart(data) {
+  const ctx = document.getElementById("overtimeChart").getContext("2d");
+  new Chart(ctx, {
+    type: "line",
     data: {
-      labels: ['Oct 1', 'Oct 2', 'Oct 3', 'Oct 4', 'Oct 5', 'Oct 6'],
+      labels: data.map(d => formatDate(d.date)),
       datasets: [{
-        label: 'Total Overtime (minutes)',
-        data: [15, 20, 25, 10, 30, 18],
+        label: "Total Overtime (minutes)",
+        data: data.map(d => d.totalOvertime || 0),
+        borderColor: "#2ECC71",
         fill: false,
-        borderColor: '#2ECC71',
         tension: 0.3
       }]
     },
     options: {
       responsive: true,
-      plugins: { legend: { display: true, position: 'top' } },
-      scales: { y: { beginAtZero: true, title: { display: true, text: 'Minutes' } } }
+      plugins: { legend: { display: true } },
+      scales: { y: { beginAtZero: true } }
     }
   });
+}
 
-  // ===== UNDERTIME (Line Chart) =====
-  const undertimeCtx = document.getElementById('undertimeChart').getContext('2d');
-  new Chart(undertimeCtx, {
-    type: 'line',
+function buildUndertimeChart(data) {
+  const ctx = document.getElementById("undertimeChart").getContext("2d");
+  new Chart(ctx, {
+    type: "line",
     data: {
-      labels: ['Oct 1', 'Oct 2', 'Oct 3', 'Oct 4', 'Oct 5', 'Oct 6'],
+      labels: data.map(d => formatDate(d.date)),
       datasets: [{
-        label: 'Total Undertime (minutes)',
-        data: [5, 10, 0, 12, 8, 6],
+        label: "Total Undertime (minutes)",
+        data: data.map(d => d.totalUndertime || 0),
+        borderColor: "#F4B400",
         fill: false,
-        borderColor: '#F4B400',
         tension: 0.3
       }]
     },
     options: {
       responsive: true,
-      plugins: { legend: { display: true, position: 'top' } },
-      scales: { y: { beginAtZero: true, title: { display: true, text: 'Minutes' } } }
+      plugins: { legend: { display: true } },
+      scales: { y: { beginAtZero: true } }
     }
   });
+}
 
+// Helper to format date
+function formatDate(dateStr) {
+  const d = new Date(dateStr);
+  return d.toLocaleDateString("en-US", { month: "short", day: "numeric" });
+}
 
+// ✅ Fetch total payroll processed
+fetch("/api/payroll/count")
+  .then(res => res.json())
+  .then(data => {
+    document.getElementById("payrollProcessed").textContent = data.totalProcessed;
+  })
+  .catch(err => console.error("Error fetching payroll count:", err));
 
 </script>
+
+
 </body>
 </html>
